Fixed eventDisplay bind.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -138,6 +138,10 @@
       font-weight: bold;
       font-size: .85rem;
     }
+
+    .v-cal-event-name {
+      margin-left: 5px;
+    }
   }
 
   &.v-cal-content--month,
