--- a/scss/_dialog.scss
+++ b/scss/_dialog.scss
@@ -12,7 +12,7 @@
   }
 
   .v-cal-dialog__bg {
-    background-color: rgba(0,0,0,.3);
+    background-color: $v-cal-dialog-bg;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -25,7 +25,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-width: 500px;
+    max-width: $v-cal-dialog-card-max-width;
     box-shadow: $v-cal-dialog-shadow;
   }
 
@@ -36,6 +36,7 @@
     border-bottom: 1px solid $v-cal-dialog-header-border-color;
 
     .v-cal-dialog__title {
+      font-size: $v-cal-dialog-title-font-size;
       margin: 0;
     }
 
